--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,24 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-test {
+tasks.withType(Test) {
     useJUnitPlatform()
+    systemProperties(System.getProperties())
+
+//    systemProperty("browser", "safari")
+//    systemProperty("environment", System.getProperty("environment", "stage")) // preprod, prod, stage
+
+    testLogging {
+        lifecycle {
+//            events "started", "failed"
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
+}
+
+task properties_tests(type: Test) {
+    useJUnitPlatform{
+        includeTags "properties"
+    }
 }
